Pulled the feature fucntion unit tests out into their own module.